Run CI tests on all python versions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
 
       - run:
           name: Test
-          command: tox -e py27
+          command: tox
 
       - save_cache:
           name: "Saving tox cache"
