--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ envlist = py27,py34,py36
 [testenv]
 usedevelop = True
 deps = -rops/devrequirements.txt
-commands = peltak clean -e "*.tox/*" -e "*env/*"
-           peltak test --plugins=-sugar,-django --allow-empty
+commands = peltak clean
+           peltak test --plugins=-sugar --allow-empty
 
 [testenv:py36]
-commands = peltak clean -e "*.tox/*" -e "*env/*"
-           peltak test --plugins=-sugar,-django --junit --allow-empty
+commands = peltak clean
+           peltak test --plugins=-sugar --junit --allow-empty
